updated mobile overflow issue

--- a/style.css
+++ b/style.css
@@ -261,8 +261,6 @@ span {
   p {font-size: 0.9em;}
   h1 {font-size: 1.8em;}
   #cloudfloat, #cloudfloat2 {animation: float 20s infinite;}
-}
-
-@media only screen and (max-width: 400px) {
   #found {font-size: 0em;}
+}
 }
